# TL.DR

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_pdf_embeddings.py  test_single_pdf.py
chroma_db/: chroma.sqlite3
src/: __main__.py  cli.py  rag_pipeline.py
src/document_processors/: __init__.py  processor_factory.py  pymupdf_processor.py  unstructured_processor.py
src/embeddings/: __init__.py  bge_embedding.py  e5_embedding.py  embedding_factory.py  jina_embedding.py  qwen_embedding.py
src/interfaces/: __init__.py  document_processor_interface.py  embedding_interface.py  llm_interface.py  vector_db_interface.py
src/llms/: __init__.py  ollama_llm.py  openai_llm.py
src/vector_dbs/: __init__.py  chroma_db.py
tests/: __init__.py  conftest.py
tests/document_processors/: __init__.py  test_processor_factory.py  test_pymupdf_processor.py  test_unstructured_processor.py
tests/embeddings/: test_embedding_factory.py
