[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tldr-rag"
version = "0.1.0"
description = "A RAG (Retrieval-Augmented Generation) system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.ruff]
# 린팅 및 포맷팅 설정
line-length = 88
target-version = "py38"

# 포함할 디렉토리
include = ["src/**/*.py", "tests/**/*.py"]

# 제외할 파일/디렉토리
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# 활성화할 규칙들
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (보안 관련)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (주석처리된 코드 제거)
]

# 무시할 규칙들
ignore = [
    "E501",   # line too long (ruff formatter가 처리)
    "S101",   # assert 사용 허용
    "T201",   # print 사용 허용 (개발 중)
    "B008",   # function call in argument defaults
]

# 파일별 무시 규칙
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["S101", "ARG001", "ARG002"]  # 테스트 파일에서는 더 관대하게

[tool.ruff.lint.isort]
# import 정렬 설정
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# 포맷팅 설정
quote-style = "double"
indent-style = "space"
line-ending = "auto"
